src/test/deca/context/invalid/without_class/undefined_type.deca
// Description:
//    Declaring variable with an unknown/wrong type  
//
// Result:
//     UNDEFINED_TYPE: Type \(.\)\+ is undefined
//     line 8
{
     integer x;
}